# grpc_api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  build.rs  docker-compose.yml  run.md
migrations/: 202604230001_create_users.sql  202604230002_add_user_role.sql
proto/: users.proto
src/: lib.rs  main.rs
tests/: integration_users.rs
